Restore dietary checkers using the agreed three-field Finding contract
Restore the HALAL, vegetarian, vegan, and nutrition checkers together with their focused unit tests.

A four-field Finding contract was previously considered because an additional FindingType could distinguish confirmed conflicts from uncertain or incomplete data and improve verdict accuracy. After confirming the shared design with Huayuan, the project will retain the existing three-field Finding contract for compatibility.

The restored checkers now use:
- restrictionCode
- ingredientName
- reason

No changes were made to Finding.java, DietaryRuleEngine, lookup interfaces, database files, or teammate-owned components.

Validation completed:
- Backend compilation passed
- 45 focused checker tests passed
- git diff --check passed